--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
+    "react-date-picker": "^8.4.0",
+    "react-datepicker": "^4.7.0",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
