--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-date-picker": "^8.4.0",
     "react-datepicker": "^4.7.0",
     "react-day-picker": "^7.4.10",
