--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "typescript": "^4.5.5",
