--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
+    "json-server": "^0.17.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-date-picker": "^8.4.0",
