--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "json-server": "^0.17.0",
     "moment": "^2.29.1",
